force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Stores event details like dates, seats, type, etc.</description>
    <label>Event</label>
    <nameField>
        <displayFormat>Event-{0}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>