force-app/main/default/objects/Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Event end date and time</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>