force-app/main/default/objects/Event__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Type of event</description>
    <inlineHelpText>Is this a in-persion or virtual event</inlineHelpText>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>In-Person</fullName>
                <default>true</default>
                <label>In-Person</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>