force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the event is currently live</description>
    <inlineHelpText>check is the even t is active</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>