force-app/main/default/objects/Event__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Event organizer</description>
    <inlineHelpText>Select the organizer for this event</inlineHelpText>
    <label>Organizer</label>
    <referenceTo>EventOrganizer__c</referenceTo>
    <relationshipLabel>Event Organizer</relationshipLabel>
    <relationshipName>EventOrganizer</relationshipName>
    <type>Lookup</type>
</CustomField>