force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a recurring event?</description>
    <inlineHelpText>Check if the event repeats</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>