force-app/main/default/objects/Event__c/validationRules/EndDate_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_After_StartDate</fullName>
    <active>true</active>
    <description>End date must be at least one day after start date.</description>
    <errorConditionFormula>NOT(ISBLANK(End_Date_Time__c)) &amp;&amp; End_Date_Time__c &lt;= Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End date/time must be at least one day after start date/time.</errorMessage>
</ValidationRule>