force-app/main/default/objects/Event__c/validationRules/InPerson_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>InPerson_Location_Required</fullName>
    <active>true</active>
    <description>In-person events require a location.</description>
    <errorConditionFormula>ISPICKVAL(Event_Type__c, "In-Person") && ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>In-person events require a location. Please select a location.</errorMessage>
</ValidationRule>