force-app/main/default/objects/Event__c/validationRules/Recurring_Frequency_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Frequency_Required</fullName>
    <active>true</active>
    <description>Recurring events must have a frequency selected.</description>
    <errorConditionFormula>AND(Recurring__c = true, ISBLANK(Frequency__c))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Please select a frequency (Daily or Weekly) for this recurring event.</errorMessage>
</ValidationRule>