force-app/main/default/objects/Event__c/validationRules/Virtual_No_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_No_Location</fullName>
    <active>true</active>
    <description>Virtual events cannot have a location selected.</description>
    <errorConditionFormula>ISPICKVAL(EventType__c, "Virtual") &amp;&amp; NOT(ISBLANK(Location__c))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Virtual events cannot have a location. Please clear the location field.</errorMessage>
</ValidationRule>